...
            ),
            child: Row(
              mainAxisAlignment: MainAxisAlignment.spaceBetween,
              children: [
                // Back Button
                IconButton(
                  key: Key('back_to_home_button'),
                  icon: Icon(Icons.arrow_back_ios_new_rounded, color: Colors.white),
                  onPressed: () => Navigator.of(context).pop(),
                ),
                // Title
                Text(
                  'Campus Events',
                  style: TextStyle(
                    fontSize: 24,
                    fontWeight: FontWeight.bold,
                    color: Colors.white,
                  ),
                ),
...
                  icon: Icon(Icons.edit),
                  label: Text('Edit'),
                  onPressed: () => _editLocalEvent(e),
                ),
                SizedBox(width: 12),
                OutlinedButton.icon(
                  key: Key('publish_button'),
                  icon: Icon(Icons.cloud_upload),
                  label: Text('Publish'),
                  onPressed: () => _publishLocalEvent(e),
                ),
              ],
            )
...
            Row(
              children: [
                Expanded(
                  child: OutlinedButton.icon(
                    icon: Icon(Icons.calendar_today),
                    label: Text(_selectedDate == null
                        ? 'Pick Date'
                        : '${_selectedDate!.toLocal().toIso8601String().split("T")[0]}'),
                    onPressed: _pickDate,
                  ),
                ),
                SizedBox(width: 8),
                Expanded(
                  child: OutlinedButton.icon(
                    icon: Icon(Icons.access_time),
                    label: Text(_selectedTime == null
                        ? 'Pick Time'
                        : _selectedTime!.format(context)),
                    onPressed: _pickTime,
                  ),
                ),
              ],
            ),
...

                  await DatabaseHelper.instance.insertEvent(eventToSave);
                  await _loadLocalEvents();
                  Navigator.pop(context);
                }
              },
              child: Text(doc != null ? 'Update' : 'Save Locally'),
            ),
            SizedBox(height: 16),
          ],
        ),
      ),
    );
...
