...
              ],
            ),
            child: AppBar(
              backgroundColor: Colors.transparent,
              elevation: 0,
              title: Text(
                'Study Groups',
                style: TextStyle(color: Colors.white),
              ),

              centerTitle: true,
              leading: IconButton(
                icon: Icon(Icons.arrow_back, color: Colors.white),
...
                      ),
                      SizedBox(height: 10),
                      ListTile(
                        title: Text(
                          _selectedDateTime != null
                              ? 'Session: ${DateFormat('MMM d, yyyy – h:mm a').format(_selectedDateTime!)}'
                              : 'Choose Session Time',
                        ),
                        trailing: Icon(Icons.calendar_today),
                        tileColor: Colors.blue.shade50,
                        shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(8)),
                        onTap: _pickDateTime,
                      ),
                      SizedBox(height: 10),
                      ElevatedButton(
                        onPressed: _createStudyGroup,
                        child: Text(
                          _currentlyEditingGroupId != null ? 'Update Study Group' : 'Create Study Group',
                          style: TextStyle(color: Colors.white),
                        ),
                        style: ElevatedButton.styleFrom(
                          backgroundColor: Colors.deepPurple,
                          shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(12)),
                          elevation: 5,
...
