...
  }


  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const Key('home_screen'),
      body: Container(
        width: double.infinity,
        height: double.infinity,
        decoration: BoxDecoration(
          gradient: LinearGradient(
            colors: [
...
